components/_application-layout.scss
$application-default-block:           '.application' !default;
$application-default-container-block: 'main' !default;
$application-default-content-block:   '.content' !default;
$application-default-sidebar-block:   '.sidebar' !default;

$application-layout-sidebar-nav-text-color: #f2f2f2 !default;
$application-layout-sidebar-nav-background-color: #191c1f !default;
$application-layout-sidebar-nav-link-height: rem-calc(80px) !default;
$application-layout-sidebar-nav-link-text-color: darken($application-layout-sidebar-nav-text-color, 30%) !default;
$application-layout-sidebar-nav-link-icon-roundness: rem-calc(10px) !default;
$application-layout-sidebar-nav-link-icon-padding: rem-calc(10px) !default;
$application-layout-sidebar-nav-title-height: rem-calc(60px) !default;
$application-layout-sidebar-nav-title-text-color: darken($application-layout-sidebar-nav-text-color, 50%) !default;
$application-layout-sidebar-nav-title-background-color: lighten($application-layout-sidebar-nav-background-color, 5%) !default;
$application-layout-sidebar-nav-width: rem-calc(260px) !default;

$application-layout-sidebar-header-height: rem-calc(80px) !default;
$application-layout-sidebar-footer-height: rem-calc(60px) !default;

$application-layout-sidebar-nav-classes: dashboard, paint, settings !default;
$application-layout-sidebar-nav-icons: dashboard, paint-brush, cog !default;

$include-html-application-layout: true !default;

%full-height-block {
  height: 100%;
}

%sidebar-heading {
  @extend %heading-small-uppercase;

  font-weight: $font-weight-normal;
}

@mixin generate-navigation-icon-classes(
        $classes-list: $application-layout-sidebar-nav-classes,
        $icons-list: $application-layout-sidebar-nav-icons
  ) {
    @for $i from 1 through length($classes-list) {
      $class-name: nth($classes-list, $i);
      $icon-value: nth($icons-list, $i);

      .#{$class-name} i {
        @include icon($icon-value);
      }
    }
}

@mixin build-application-sidebar(
    $sidebar-block: $application-default-sidebar-block,
    $bg-color: $application-layout-sidebar-nav-background-color,
    $width: $application-layout-sidebar-nav-width,
    $include-header: true,
    $header-height: $application-layout-sidebar-header-height,
    $header-block: 'header',
    $include-footer: true,
    $footer-height: $application-layout-sidebar-footer-height,
    $footer-block: 'footer'
  ) {
    $nav-top-margin: 0;
    $nav-bottom-margin: 0;

    @if $include-header {
      $nav-top-margin: $header-height;
    }

    @if $include-footer {
      $nav-bottom-margin: $footer-height;
    }

    #{$sidebar-block} {
      @extend %full-height-block;

      float: left;
      width: $width;
      background-color: $bg-color;
      position: relative;

      @if $include-header {
        > #{$header-block} {
          padding: 0 $column-gutter / 2;
          height: $header-height;
          line-height: $header-height;

          img {
            @include single-transition(padding, 150ms, linear);

            height: rem-calc(30px);
            margin-right: $column-gutter / 2;
            width: rem-calc(30px);
          }

          h1 {
            @extend %sidebar-heading;

            display: inline-block;
            color: $white;
            margin: 0;
          }
        }
      }

      > nav {
        position: absolute;
        top: $nav-top-margin;
        bottom: $nav-bottom-margin;
        right: 0;
        left: 0;
        overflow-y: scroll;

        header {
          background-color: $application-layout-sidebar-nav-title-background-color;
          color: $application-layout-sidebar-nav-title-text-color;
          line-height: $application-layout-sidebar-nav-title-height;
          padding: 0 $column-gutter / 2;
          white-space: nowrap;

          h1 {
            @extend %sidebar-heading;

            color: $application-layout-sidebar-nav-link-text-color;
            display: inline-block;
            margin: 0;
          }

          .toggle-collapse {
            display: inline-block;
            float: right;
            font-size: rem-calc(18px);
            line-height: $application-layout-sidebar-nav-title-height;
            color: $application-layout-sidebar-nav-link-text-color;

            button {
              @include icon(caret-square-o-left);

              background-color: transparent;
              border-width: 0;
            }
          }
        }

        > ul {
          @include generate-navigation-icon-classes();

          list-style-type: none;
          margin: 0;
          padding: 0;

          a {
            @include single-transition(color, 150ms, linear);
            @include single-transition(background-color, 150ms, linear);
            @include single-transition(margin, 150ms, linear);
            @include single-transition(padding, 150ms, linear);

            border-bottom: 1px solid $application-layout-sidebar-nav-title-background-color;
            display: block;
            font-size: $paragraph-font-size;
            font-weight: $font-weight-normal;
            line-height: $application-layout-sidebar-nav-link-height;
            padding: 0 $column-gutter;
            text-decoration: none;
            white-space: nowrap;

            &, &:visited {
              color: $application-layout-sidebar-nav-link-text-color;
            }

            &:hover {
              background-color: $application-layout-sidebar-nav-title-background-color;
            }
          }

          i {
            @include single-transition(margin, 150ms, linear);

            background-color: $application-layout-sidebar-nav-title-background-color;
            border-radius: $application-layout-sidebar-nav-link-icon-roundness;
            color: $application-layout-sidebar-nav-link-text-color;
            margin-right: $column-gutter / 2;
            padding: $application-layout-sidebar-nav-link-icon-padding;
          }
        }
      }

      @if $include-footer {
        #{$footer-block} {
          background: $application-layout-sidebar-nav-title-background-color;
          bottom: 0;
          color: $application-layout-sidebar-nav-link-text-color;
          height: $footer-height;
          left: 0;
          line-height: $footer-height;
          position: absolute;
          right: 0;
        }
      }

      &.collapsed {
        width: $width * 0.25;

        @if $include-header {
          > #{$header-block} {
            text-align: center;

            img {
              margin-right: 0;
            }
          }
        }

        > nav > ul a {
          padding: 0 $column-gutter / 2;
          text-align: center;

          > i {
            margin-right: 0;
          }

          > span {
            display: none;
          }
        }

        header {
          text-align: center;

          h1 {
            display: none;
          }
        }

        @if $include-footer {
          #{$footer-block} {
          }
        }
      }
    }
}

@mixin build-application-layout(
    $application-block: $application-default-block,
    $container-block: $application-default-container-block,
    $content-block: $application-default-content-block
  ) {
    html, body {
      @extend %full-height-block;

      overflow: hidden;
    }

    #{$application-block} {
      @extend %full-height-block;

      > #{$container-block} {
        @extend %full-height-block;

        overflow: hidden;
        position: relative;

        > #{$content-block} {
          @extend %full-height-block;

          overflow-y: scroll;
        }
      }
    }
}

@include exports("application-layout") {
  @if $include-html-application-layout {
    @include build-application-layout();
    @include build-application-sidebar();
  }
}

